fixed z-index

--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,30 +1,20 @@
 header{
     width: 100%;
-    height: 550px;
+    height: 100vh;
     background-color: $first-color;
     position: relative;
-    top: -30px;
+    bottom: 70px;
 }
 
-#scene-wrapper{
-    width: 100%;
-    overflow: hidden;
-    text-align: center;
-    height: inherit;
+.header-particles{
+    height: 100vh;
 }
 
-#scene{
-    overflow: hidden;
-    height: inherit;
-}
-
-#layer10{
-    padding-top: 150px;
-    height: 550px;
-    background-color: rgba($color: $fourth-color, $alpha: 0.1);
-}
-
-.particles-js-canvas-el{
-  position: relative;
-  bottom: 300px !important;
+.header-mein{
+    height: 300px;
+    width: 700px;
+    border: 2px solid red;
+    position: relative;
+    top: 80px;
+    left: 100px;
 }
